# verihogg-lint

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.nix  outp.txt  shell.nix
linter/: CMakeLists.txt
linter/include/main/: cli.h  lint_rules.h  rule_dispatcher.h
linter/include/rules/: all_rules.h  assertion_statement_atribute_instance.h  assignment_pattern.h  assignment_pattern_context.h  circular_inheritance.h  class_variable_lifetime.h  concatenation_multiplier.h  constraint_implemention_scope.h  covergroup_expression.h  coverpoint_expression_type.h  dpi_decl_string.h  duplicate_class.h  duplicate_constructor.h  duplicate_cover_cross.h  duplicate_coverpoint.h  duplicate_enum_literal.h  empty_assignment_pattern.h  exponent_format_time_value.h  extend_class.h  extend_interface_class.h  extern_constraint_undeclared.h  extern_function_undeclared.h  extern_task_undeclared.h  fatal_rule.h  foreach_loop_condition.h  function_implementation_internal_return_type.h  function_implementation_return_type.h  function_implemention_scope.h  hierarchical_interface_identifier.h  implement_class.h  implement_interface_class.h  implicit_data_type.h  incomplete_assignment_pattern.h  inside_operator.h  inside_operator_range.h  invalid_liblist.h  method_implementation_argument_type.h  method_implemention_scope_common.h  missing_for_loop_condition.h  missing_for_loop_initialization.h  (+21 more)
linter/include/utils/: ast_utils.h  class_scope_utils.h  config_utils.h  design_utils.h  init.h  location_utils.h  module_utils.h  name_utils.h  string_utils.h
linter/src/main/: cli.cpp  lint.cpp  rule_dispatcher.cpp
linter/src/rules/: assertion_statement_atribute_instance.cpp  assignment_pattern.cpp  assignment_pattern_context.cpp  assignment_pattern_values.cpp  circular_inheritance.cpp  class_variable_lifetime.cpp  concatenation_multiplier.cpp  constraint_implemention_scope.cpp  coverpoint_expression_type.cpp  dpi_decl_string.cpp  duplicate_class.cpp  duplicate_constructor.cpp  duplicate_cover_cross.cpp  duplicate_covergroup.cpp  duplicate_coverpoint.cpp  duplicate_enum_literal.cpp  duplicate_event.cpp  empty_assignment_pattern.cpp  event_singular.cpp  exponent_format_time_value.cpp  expression_covergroup.cpp  extend_class.cpp  extend_interface_class.cpp  extern_constraint_undeclared.cpp  extern_function_undeclared.cpp  extern_task_undeclared.cpp  fatal_rule.cpp  foreach_loop_condition.cpp  function_implementation_internal_return_type.cpp  function_implementation_return_type.cpp  function_implemention_scope.cpp  hierarchical_interface_identifier.cpp  implement_class.cpp  implement_interface_class.cpp  implicit_data_type.cpp  incomplete_assignment_pattern.cpp  inside_operator.cpp  inside_operator_range.cpp  invalid_liblist.cpp  logical_negation.cpp  (+27 more)
linter/src/utils/: ast_utils.cpp  class_scope_utils.cpp  config_utils.cpp  design_utils.cpp  init.cpp  location_utils.cpp  module_utils.cpp  name_utils.cpp  string_utils.cpp
tests/: CMakeLists.txt  Non_standard_check.cpp  assignment_pattern_checks_test.cpp  class_checks_test.cpp  configurations_checks_test.cpp  configurations_test.cpp  utils.cpp  utils.h
tests/AssignmentPatternChecks/AssignmentPatternValues/NoError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv  case6.sv  case7.sv  case8.sv
tests/AssignmentPatternChecks/AssignmentPatternValues/RaiseError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv  case6.sv
tests/AssignmentPatternChecks/IncompleteAssignmentPattern/NoError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv
tests/AssignmentPatternChecks/IncompleteAssignmentPattern/RaiseError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv
tests/ClassChecks/CircularInheritance/NoError/: case0.sv  case1.sv  case2.sv
tests/ClassChecks/CircularInheritance/RaiseError/: case0.sv  case3.sv  case4.sv  case6.sv
tests/ClassChecks/DuplicateClass/NoError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv  case6.sv  case7.sv  case8.sv
tests/ClassChecks/DuplicateClass/RaiseError/: case0.sv  case1.sv  case10.sv  case2.sv  case3.sv  case4.sv  case5.sv  case7.sv  case8.sv  case9.sv
tests/ClassChecks/DuplicateConstructor/NoError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv  case6.sv
tests/ClassChecks/DuplicateConstructor/RaiseError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv  case6.sv  case7.sv  case8.sv
tests/ClassChecks/ExtendClass/NoError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv  case6.sv  case7.sv
tests/ClassChecks/ExtendClass/RaiseError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv  case6.sv  case7.sv  case8.sv  case9.sv
tests/ClassChecks/ExtendInterfaceClass/NoError/: case0.sv  case1.sv  case2.sv  case3.sv
tests/ClassChecks/ExtendInterfaceClass/RaiseError/: case0.sv  case1.sv
tests/ClassChecks/ExternConstraintUndeclared/NoError/: case1.sv  case2.sv
tests/ClassChecks/ExternConstraintUndeclared/RaiseError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv  case6.sv
tests/ClassChecks/ExternContraintUndeclared/NoError/: case0.sv
tests/ClassChecks/ExternContraintUndeclared/RaiseError/: case0.sv
tests/ClassChecks/ExternFunctionUndeclared/NoError/: case0.sv  case1.sv  case2.sv
tests/ClassChecks/ExternFunctionUndeclared/RaiseError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv
tests/ClassChecks/ExternTaskUndeclared/NoError/: case0.sv  case1.sv  case2.sv
tests/ClassChecks/ExternTaskUndeclared/RaiseError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv  case5.sv  case6.sv
tests/ClassChecks/ImplementClass/NoError/: case0.sv  case1.sv
tests/ClassChecks/ImplementClass/RaiseError/: case0.sv  case1.sv  case2.sv
tests/ClassChecks/ImplementInterfaceClass/NoError/: case0.sv  case1.sv
tests/ClassChecks/ImplementInterfaceClass/RaiseError/: case0.sv  case1.sv  case2.sv  case3.sv  case4.sv
tests/Configurations/InvalidLiblist/NoError/: case0.sv  case1.sv  case2.sv  case3.sv  case5.sv
tests/container/: Dockerfile.test  run_tests.sh  structure_test.yaml
(+293 files in other folders)
